# VariadicPrint

./: CMakeLists.txt  README.MD  VariadicPrint-config.cmake  main.cpp  variadic_print.hpp  variadicprint-config.cmake
include/gwachs/: container_typetraits.hpp  variadic_print.hpp
